# WhatsNew-MCPserver

./: LICENSE  README-kr.md  README.md  pyproject.toml
powers/: mcp.json
powers/whats-new-mcp/: POWER.md
src/whats_new_mcp/: server.py
